force-app/main/default/objects/Change_Request__c/Change_Request__c.object-meta.xml
<CustomObject>
    <description>Tracks all Salesforce configuration and customization changes for CAB governance</description>
    <label>Change Request</label>
    <nameField>
        <displayFormat>CR-{YYYY}-{MM}-{0000}</displayFormat>
        <label>CR Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>