force-app/main/default/objects/Change_Request__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <description>Type of change</description>
    <label>Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>