force-app/main/default/objects/Change_Request__c/fields/Peer_Review_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review_Evidence__c</fullName>
    <label>Peer Review Evidence</label>
    <type>Url</type>
</CustomField>