force-app/main/default/objects/Change_Request__c/fields/QA_Evidence_Attached__c.field-meta.xml
<CustomField>
    <fullName>QA_Evidence_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>QA test results included</description>
    <label>QA Evidence Attached</label>
    <type>Checkbox</type>
</CustomField>