force-app/main/default/objects/Change_Request__c/fields/Support_KT_Completed__c.field-meta.xml
<CustomField>
    <fullName>Support_KT_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support KT Completed</label>
    <type>Checkbox</type>
</CustomField>